# findreq

./: LICENSE  README.md  pyproject.toml
src/findreq/: __init__.py  main.py  scan.py
tests/: test_main.py  test_scan.py
