[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "findreq"
version = "0.1.0"
description = "A Python utility to detect imported modules and generate pip install commands for a project."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Syed Rakesh Uddin", email = "syedrakeshuddin@gmail.com" }]
requires-python = ">=3.8"
keywords = ["dependencies", "python", "packages"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
findreq = "findreq.main:main"
